# yuv-valence

./: CMakeLists.txt  Color.hpp  Light.hpp  Material.hpp  README.md  main.cpp
shaders/: phong.fs  phong.gs  phong.vs  phong_dbg.fs  phong_dbg.gs  phong_dbg.vs  phong_yuv.fs  phong_yuv.gs  phong_yuv.vs  screen_tex.fs  screen_tex.vs
triangle/: triangle.c  triangle.h
